styles[global, normalize]: style fix for scrollbar and page height

--- a/src/pages/Login/Login.module.css
+++ b/src/pages/Login/Login.module.css
@@ -76,7 +76,7 @@
 @media (max-width: 48rem) {
   .loginBlock {
     width: 100%;
-    height: 100%;
+    height: 100dvh;
     box-shadow: none;
     min-height: 0;
   }
