--- a/src/styles/normalize.css
+++ b/src/styles/normalize.css
@@ -87,9 +87,17 @@ html {
 
 /* Основные body-стили */
 body {
-  min-height: 100%;
+  overflow-y: hidden;
   line-height: 1.5;
   text-rendering: optimizespeed;
+}
+
+#root {
+  height: 100dvh;
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
+  scrollbar-gutter: stable;
 }
 
 /* Интерактивные элементы */
